[package]
name = "btleplug-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9.2"
uuid = "0.8.2"
tokio = { version = "1.16.1", features = ["full"]}
log = "0.4"
pretty_env_logger = "0.3"
futures = "0.3"